--- a/css&js/css/main.css
+++ b/css&js/css/main.css
@@ -630,7 +630,7 @@ section,
   border: 2px solid var(--accent-color);
 }
 
-.projects .project-item {
+.services .service-item {
   background-color: var(--surface-color);
   box-shadow: 0px 5px 90px 0px rgba(0, 0, 0, 0.1);
   height: 100%;
@@ -640,7 +640,7 @@ section,
   border-radius: 5px;
 }
 
-.projects .project-item .icon {
+.services .service-item .icon {
   margin: 0 auto;
   width: 100px;
   height: 100px;
@@ -651,108 +651,108 @@ section,
   position: relative;
 }
 
-.projects .project-item .icon i {
+.services .service-item .icon i {
   font-size: 36px;
   transition: 0.5s;
   position: relative;
 }
 
-.projects .project-item .icon svg {
+.services .service-item .icon svg {
   position: absolute;
   top: 0;
   left: 0;
 }
 
-.projects .project-item .icon svg path {
+.services .service-item .icon svg path {
   transition: 0.5s;
   fill: color-mix(in srgb, var(--default-color), transparent 95%);
 }
 
-.projects .project-item h3 {
+.services .service-item h3 {
   font-weight: 700;
   margin: 10px 0 15px 0;
   font-size: 22px;
 }
 
-.projects .project-item p {
+.services .service-item p {
   line-height: 24px;
   font-size: 14px;
   margin-bottom: 0;
 }
 
-.projects .project-item:hover {
+.services .service-item:hover {
   box-shadow: 0px 5px 35px 0px rgba(0, 0, 0, 0.1);
 }
 
-.projects .project-item.item-cyan i {
+.services .service-item.item-cyan i {
   color: #0dcaf0;
 }
 
-.projects .project-item.item-cyan:hover .icon i {
+.services .service-item.item-cyan:hover .icon i {
   color: #fff;
 }
 
-.projects .project-item.item-cyan:hover .icon path {
+.services .service-item.item-cyan:hover .icon path {
   fill: #0dcaf0;
 }
 
-.projects .project-item.item-orange i {
+.services .service-item.item-orange i {
   color: #fd7e14;
 }
 
-.projects .project-item.item-orange:hover .icon i {
+.services .service-item.item-orange:hover .icon i {
   color: #fff;
 }
 
-.projects .project-item.item-orange:hover .icon path {
+.services .service-item.item-orange:hover .icon path {
   fill: #fd7e14;
 }
 
-.projects .project-item.item-teal i {
+.services .service-item.item-teal i {
   color: #20c997;
 }
 
-.projects .project-item.item-teal:hover .icon i {
+.services .service-item.item-teal:hover .icon i {
   color: #fff;
 }
 
-.projects .project-item.item-teal:hover .icon path {
+.services .service-item.item-teal:hover .icon path {
   fill: #20c997;
 }
 
-.projects .project-item.item-red i {
+.services .service-item.item-red i {
   color: #df1529;
 }
 
-.projects .project-item.item-red:hover .icon i {
+.services .service-item.item-red:hover .icon i {
   color: #fff;
 }
 
-.projects .project-item.item-red:hover .icon path {
+.services .service-item.item-red:hover .icon path {
   fill: #df1529;
 }
 
-.projects .project-item.item-indigo i {
+.services .service-item.item-indigo i {
   color: #6610f2;
 }
 
-.projects .project-item.item-indigo:hover .icon i {
+.services .service-item.item-indigo:hover .icon i {
   color: #fff;
 }
 
-.projects .project-item.item-indigo:hover .icon path {
+.services .service-item.item-indigo:hover .icon path {
   fill: #6610f2;
 }
 
-.projects .project-item.item-pink i {
+.services .service-item.item-pink i {
   color: #f3268c;
 }
 
-.projects .project-item.item-pink:hover .icon i {
+.services .service-item.item-pink:hover .icon i {
   color: #fff;
 }
 
-.projects .project-item.item-pink:hover .icon path {
+.services .service-item.item-pink:hover .icon path {
   fill: #f3268c;
 }
 
@@ -847,16 +847,16 @@ section,
   overflow: hidden;
 }
 
-.project-details .project-box {
+.service-details .service-box {
   padding: 20px;
   box-shadow: 0px 2px 20px rgba(0, 0, 0, 0.1);
 }
 
-.project-details .project-box+.project-box {
+.service-details .service-box+.service-box {
   margin-top: 30px;
 }
 
-.project-details .project-box h4 {
+.service-details .service-box h4 {
   font-size: 20px;
   font-weight: 700;
   border-bottom: 2px solid color-mix(in srgb, var(--default-color), transparent 92%);
@@ -864,7 +864,7 @@ section,
   margin-bottom: 15px;
 }
 
-.project-details .projects-list a {
+.service-details .services-list a {
   color: color-mix(in srgb, var(--default-color), transparent 20%);
   background-color: color-mix(in srgb, var(--default-color), transparent 96%);
   display: flex;
@@ -874,31 +874,31 @@ section,
   transition: 0.3s;
 }
 
-.project-details .projects-list a:first-child {
+.service-details .services-list a:first-child {
   margin-top: 0;
 }
 
-.project-details .projects-list a i {
+.service-details .services-list a i {
   font-size: 16px;
   margin-right: 8px;
   color: var(--accent-color);
 }
 
-.project-details .projects-list a.active {
+.service-details .services-list a.active {
   color: var(--contrast-color);
   background-color: var(--accent-color);
 }
 
-.project-details .projects-list a.active i {
+.service-details .services-list a.active i {
   color: var(--contrast-color);
 }
 
-.project-details .projects-list a:hover {
+.service-details .services-list a:hover {
   background-color: color-mix(in srgb, var(--accent-color), transparent 95%);
   color: var(--accent-color);
 }
 
-.project-details .download-catalog a {
+.service-details .download-catalog a {
   color: var(--default-color);
   display: flex;
   align-items: center;
@@ -907,67 +907,67 @@ section,
   border-top: 1px solid color-mix(in srgb, var(--default-color), transparent 90%);
 }
 
-.project-details .download-catalog a:first-child {
+.service-details .download-catalog a:first-child {
   border-top: 0;
   padding-top: 0;
 }
 
-.project-details .download-catalog a:last-child {
+.service-details .download-catalog a:last-child {
   padding-bottom: 0;
 }
 
-.project-details .download-catalog a i {
+.service-details .download-catalog a i {
   font-size: 24px;
   margin-right: 8px;
   color: var(--accent-color);
 }
 
-.project-details .download-catalog a:hover {
+.service-details .download-catalog a:hover {
   color: var(--accent-color);
 }
 
-.project-details .help-box {
+.service-details .help-box {
   background-color: var(--accent-color);
   color: var(--contrast-color);
   margin-top: 30px;
   padding: 30px 15px;
 }
 
-.project-details .help-box .help-icon {
+.service-details .help-box .help-icon {
   font-size: 48px;
 }
 
-.project-details .help-box h4,
-.project-details .help-box a {
+.service-details .help-box h4,
+.service-details .help-box a {
   color: var(--contrast-color);
 }
 
-.project-details .projects-img {
+.service-details .services-img {
   margin-bottom: 20px;
 }
 
-.project-details h3 {
+.service-details h3 {
   font-size: 26px;
   font-weight: 700;
 }
 
-.project-details p {
+.service-details p {
   font-size: 15px;
 }
 
-.project-details ul {
+.service-details ul {
   list-style: none;
   padding: 0;
   font-size: 15px;
 }
 
-.project-details ul li {
+.service-details ul li {
   padding: 5px 0;
   display: flex;
   align-items: center;
 }
 
-.project-details ul i {
+.service-details ul i {
   font-size: 20px;
   margin-right: 8px;
   color: var(--accent-color);
